Fix spacing of header/main/footer

--- a/src/main.css
+++ b/src/main.css
@@ -14,10 +14,19 @@
 body {
   background-color: #fff;
   margin: 0;
+  height: 100vh;
+}
+
+#content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
 }
 
 header {
   flex: 0;
+  height: 30px;
   font-size: 20px;
   display: flex;
   justify-content: space-evenly;
@@ -33,8 +42,12 @@ header div:hover {
   height: 21px;
 }
 
+main {
+  flex: 1;
+}
+
 footer {
-  height: 40px;
+  height: 20px;
 }
 
 footer {
@@ -49,10 +62,6 @@ footer {
 
 .logos {
   margin-left: 8px;
-}
-
-.logos img {
-  width: 18;
 }
 
 .logos:hover {
